--- a/final/about.html
+++ b/final/about.html
@@ -75,8 +75,8 @@
                             <p>You can follow me on social media at the links below:</p>
                             <div class="connect-us">
                                 <ul>
-                                    <li><a href="https://twitter.com/Seamus_J_Allen"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="https://www.instagram.com/amaroq2002/"><i class="fa fa-instagram"></i></a></li>
+                                    <li><a href="https://twitter.com/Seamus_J_Allen" aria-label="Twitter Link"><i class="fa fa-twitter"></i></a></li>
+                                    <li><a href="https://www.instagram.com/amaroq2002/" aria-label="Instagram Link"><i class="fa fa-instagram"></i></a></li>
                                 </ul>
                             </div>
                             </div>
