--- a/final/index.html
+++ b/final/index.html
@@ -239,8 +239,8 @@ https://templatemo.com/tm-506-tinker
                         <p><strong>Disillusioned Citizen</strong>: <a href="http://disillusionedcitizen.org" target="_blank">disillusionedcitizen.org</a></p>
                         <br>
                         <h4>Music — Broke in Summer by Driver</h4>
-                        <audio controls autoplay="true" loop="true" preload="auto" id="song">
-                            <source src="img/yt1s.com - Driver  Broke in Summer Audio Library Release  Free Copyrightsafe Music.mp3">
+                        <audio controls preload="auto" id="song">
+                            <source src="img/BrokeInSummer.mp3">
                         </audio>
                     </div>
                 </div>
